Cleaning Data & Embedding Process

--- a/rag_langchain.ipynb
+++ b/rag_langchain.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -65,8 +65,8 @@
     }
    ],
    "source": [
-    "os.chdir(\"C:\\\\Users\\\\Korn\\\\Desktop\\\\dsi314\\\\Chatbot-Tourism-Recommendation-for-Pathum-Thani-Using-RAG\")\n",
-    "print(os.getcwd())"
+    "# os.chdir(\"C:\\\\Users\\\\Korn\\\\Desktop\\\\dsi314\\\\Chatbot-Tourism-Recommendation-for-Pathum-Thani-Using-RAG\")\n",
+    "# print(os.getcwd())"
    ]
   },
   {
