--- a/rag_langchain.ipynb
+++ b/rag_langchain.ipynb
@@ -2,28 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Korn\\Desktop\\dsi314\\Chatbot-Tourism-Recommendation-for-Pathum-Thani-Using-RAG\\venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import re\n",
@@ -34,6 +15,7 @@
     "\n",
     "from pathlib import Path\n",
     "from typing import overload\n",
+    "from collections import defaultdict\n",
     "from langchain_core.documents import Document\n",
     "from langchain_community.document_loaders import PyMuPDFLoader\n",
     "from langchain.chains import ConversationalRetrievalChain\n",
@@ -78,9 +60,9 @@
     "def restructure_json(input_path: str, main_key: str = \"name\"):\n",
     "    with open(input_path, \"r\", encoding=\"utf-8\") as file:\n",
     "        data = json.load(file)\n",
-    "    \n",
+    "\n",
     "    updated_data = {main_key: data}\n",
-    "    \n",
+    "\n",
     "    with open(input_path, \"w\", encoding=\"utf-8\") as file:\n",
     "        json.dump(updated_data, file, ensure_ascii=False, indent=4)\n",
     "\n",
@@ -103,7 +85,50 @@
     "              page_content=page_content,\n",
     "          )\n",
     "          documents.append(current_document)\n",
-    "    return documents"
+    "    return documents\n",
+    "\n",
+    "def format_reviews(input_file):\n",
+    "    with open(input_file, \"r\", encoding=\"utf-8\") as file:\n",
+    "        data = json.load(file)[\"name\"]\n",
+    "\n",
+    "    grouped_data = defaultdict(lambda: {\n",
+    "        \"description\": \"\",\n",
+    "        \"main_category\": \"\",\n",
+    "        \"rating_x\": 0,\n",
+    "        \"review_texts\": [],\n",
+    "        \"workday_timing\": \"\",\n",
+    "        \"closed_on\": \"\",\n",
+    "        \"address\": \"\",\n",
+    "        \"website\": \"\",\n",
+    "        \"phone\": \"\",\n",
+    "        \"link\": \"\"\n",
+    "    })\n",
+    "\n",
+    "    for entry in data:\n",
+    "        place_name = entry[\"place_name\"]\n",
+    "        grouped = grouped_data[place_name]\n",
+    "        grouped[\"description\"] = entry[\"description\"]\n",
+    "        grouped[\"main_category\"] = entry[\"main_category\"]\n",
+    "        grouped[\"rating_x\"] = entry[\"rating_x\"]\n",
+    "        grouped[\"review_texts\"].append(entry[\"review_text\"])\n",
+    "        grouped[\"workday_timing\"] = entry[\"workday_timing\"]\n",
+    "        grouped[\"closed_on\"] = entry[\"closed_on\"]\n",
+    "        grouped[\"address\"] = entry[\"address\"]\n",
+    "        grouped[\"website\"] = entry[\"website\"]\n",
+    "        grouped[\"phone\"] = entry[\"phone\"]\n",
+    "        grouped[\"link\"] = entry[\"link\"]\n",
+    "\n",
+    "        # รวม review_texts เป็นข้อความเดียว\n",
+    "    for place_name, details in grouped_data.items():\n",
+    "        details[\"review_texts\"] = \"\\n\\n\".join(details[\"review_texts\"])\n",
+    "\n",
+    "    formatted_data = [\n",
+    "        {\"place_name\": place_name, **details}\n",
+    "        for place_name, details in grouped_data.items()\n",
+    "    ]\n",
+    "\n",
+    "    with open(input_file, \"w\", encoding=\"utf-8\") as file:\n",
+    "        json.dump(formatted_data, file, ensure_ascii=False, indent=4)"
    ]
   },
   {
@@ -116,7 +141,7 @@
     "doc_paths = [\n",
     "    \"./data\\darft.pdf\",\n",
     "    \"./data\\draft2.pdf\",\n",
-    "    \"./data\\สามโคก ร้านอาหาร คาเฟ่ เมือง คา.csv\",\n",
+    "    \"./data\\All_merged_file.csv\",\n",
     "]\n",
     "\n",
     "docs = []\n",
@@ -151,7 +176,7 @@
    "outputs": [],
    "source": [
     "# Split docs\n",
-    "text_splitter = CharacterTextSplitter(separator=\"\\n\\n\", chunk_size=512, chunk_overlap=0)\n",
+    "text_splitter = CharacterTextSplitter(separator=\"\\n\\n\", chunk_size=1024, chunk_overlap=0)\n",
     "texts = text_splitter.split_documents(docs)"
    ]
   },
@@ -287,22 +312,42 @@
    "source": [
     "typhoon_prompt = PromptTemplate(\n",
     "    input_variables=[\"context\",\"question\"],\n",
-    "    template=\"\"\"\n",
-    "    You are an assistant for question-answering tasks. Use the following pieces of retrieved context to answer the question.\n",
-    "    You should answer the question in Thai language only.\n",
+    "    template = \"\"\"\n",
+    "    You are an intelligent assistant for question-answering tasks about Pathum Thani, Thailand. \n",
+    "    Analyze the context and question carefully to provide an appropriate response.\n",
+    "\n",
     "    Context: {context}\n",
     "\n",
-    "    You are an expert travel guide specializing in tourist attractions in Pathum Thani, Thailand.\n",
-    "    The user has the following question:\n",
+    "    Scenario Detection:\n",
+    "    1. If the question is about a tourist attraction:\n",
+    "    Response Format:\n",
+    "    - Name of the attraction \n",
+    "    - Description of the place (e.g., unique features, activities available) \n",
+    "    - Opening and closing hours (if available)\n",
+    "    - Additional information (e.g., transportation tips, entrance fees, or special advice)\n",
+    "    - Rating Score (1-5 stars)\n",
+    "    - Total Reviews\n",
+    "    - Example Review (one authentic review)\n",
+    "\n",
+    "    2. If the question is about a restaurant:\n",
+    "    Response Format:\n",
+    "    - Name of the attraction \n",
+    "    - Description of the place (e.g., unique features, activities available) \n",
+    "    - Opening and closing hours (if available)\n",
+    "    - Additional information (e.g., transportation tips, entrance fees, or special advice)\n",
+    "    - Rating Score (1-5 stars)\n",
+    "    - Total Reviews\n",
+    "    - Example Review (one authentic review)\n",
+    "\n",
+    "    3. For general conversational questions:\n",
+    "    Respond naturally in Thai, addressing the specific query without a fixed format.\n",
+    "\n",
     "    Question: {question}\n",
     "\n",
-    "    Please provide a helpful response with the following details:\n",
-    "    1. Name of the attraction\n",
-    "    2. Description of the place (e.g., unique features, activities available)\n",
-    "    3. Opening and closing hours\n",
-    "    4. Additional information (e.g., transportation tips, entrance fees, or special advice)\n",
-    "    \n",
-    "    If you don't know the answer, simply say, \"I don't know.\"\n",
+    "    Important Guidelines:\n",
+    "    - Always respond in Thai language\n",
+    "    - Provide accurate and helpful information\n",
+    "    - If no information is available, respond with \"I don't know.\"\n",
     "    \"\"\",\n",
     ")"
    ]
@@ -406,7 +451,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -420,7 +465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
