--- a/rag_langchain.ipynb
+++ b/rag_langchain.ipynb
@@ -2,9 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Korn\\Desktop\\dsi314\\Chatbot-Tourism-Recommendation-for-Pathum-Thani-Using-RAG\\venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import sys\n",
     "import re\n",
@@ -53,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +99,7 @@
     "        for each_data in data:\n",
     "          page_content: str = \"\"\n",
     "          for k in each_data:\n",
-    "              page_content = page_content + f\"{k} {each_data[k]}\"\n",
+    "              page_content = page_content + f\"\\n{k} {each_data[k]}\"\n",
     "          current_document = Document(\n",
     "              page_content=page_content,\n",
     "          )\n",
@@ -133,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +174,10 @@
     "            data = loader.load_and_split()\n",
     "        elif str(file_path).endswith(\".csv\"):\n",
     "            df = pd.read_csv(file_path)\n",
-    "            df = df[['name','description','reviews','website','phone','main_category','rating','workday_timing','closed_on','address','link']]\n",
+    "            df = df[['place_name','description','total reviews','website','phone','main_category','rating score','review','workday_timing','closed_on','address','google map']]\n",
+    "            df = df.drop_duplicates(subset=['place_name'])\n",
+    "            max_length = 300\n",
+    "            df = df[df['review'].str.len() <= max_length]\n",
     "            df.to_json(f'./data\\cleaned_{file_name}.json', force_ascii=False, orient='records')            \n",
     "            restructure_json(f'./data\\cleaned_{file_name}.json')\n",
     "            data = extract_data(f'./data\\cleaned_{file_name}.json')\n",
@@ -171,9 +193,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Created a chunk of size 1518, which is longer than the specified 1024\n"
+     ]
+    }
+   ],
    "source": [
     "# Split docs\n",
     "text_splitter = CharacterTextSplitter(separator=\"\\n\\n\", chunk_size=1024, chunk_overlap=0)\n",
@@ -182,39 +212,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "page_content='○ วัดบางหลวงสร้างในสมัยกรุงศรีอยุธยา อุโบสถหลังเก่าเป็นที่ประดิษฐาน หลวงพ่อใหญ่ ซึ่งเป็น\n",
-      "พระประธานที่มีขนาดใหญ่ที่สุดของเมืองปทุมธานี ส่วนหลวงพ่อเพชร เป็นพระพุทธรูปสมัย\n",
-      "เชียงแสน มีพุทธลักษณะพิเศษ คือ พระหัตถ์ซ้ายบิดไปมาได้ ทางวัดจะอัญเชิญหลวงพ่อเพชรออก\n",
-      "มาให้ประชาชนได้สักการะในช่วงเทศกาลออกพรรษา นอกจากนี้ วัดบางหลวงมีการกวนข้าวทิพย์\n",
-      "ในวันที่ 10-11 เมษายนของทุกปี\n",
-      "○ วัดหงส์ปทุมาวาสหรือ วัดมอญ เป็นวัดราษฎร์สังกัดคณะสงฆ์ฝ่ายมหานิกาย ตั้งอยู่ริมแม่น้ำ\n",
-      "เจ้าพระยา ในตำบลบางปรอก อำเภอเมืองปทุมธานี จังหวัดปทุมธานี เป็นวัดได้รับรางวัลชนะเลิศ\n",
-      "โครงการอนุรักษ์พันธุ์ปลาหน้าวัดด้วยความที่มีพันธุ์ปลาต่าง ๆ มากมาย ไม่ว่าจะเป็นปลาสวาย\n",
-      "ปลาเทโพ ปลาแรด ปลาตะเพียน และปลาอื่นอีกหลายชนิด มีที่ดินที่ตั้งวัดเนื้อที่ 12 ไร่ 1 งาน 52\n",
-      "ตารางวา โดยวัดหงส์ปทุมาวาสสร้างขึ้นเมื่อ พ.ศ. 2317 โดยชาวมอญที่อพยพหนีพม่ามาไทยใน\n",
-      "สมัยพระเจ้ากรุงธนบุรี เดิมมีชื่อว่า วัดหงษา จนกระทั่งใน พ.ศ. 2485 จึงเปลี่ยนชื่อมาเป็น \"วัด\n",
-      "หงษ์ปทุมาวาส\" ได้รับพระราชทานวิสุงคามสีมาเมื่อวันที่ 30 ธันวาคม พ.ศ. 2524 เขต\n",
-      "วิสุงคามสีมากว้าง 40 เมตร ยาว 60 เมตร และได้ดำเนินการผูกพัทธสีมาเมื่อวันที่ 10 เมษายน\n",
-      "พ.ศ. 2525 ภายในบริเวณวัดปรากฏสัญลักษณ์ของชนชาวมอญ คือ เสาหงส์และตัวหงส์บนยอด\n",
-      "เสา มีเจดีย์ทรงมอญซึ่งเป็นเจดีย์ที่จำลองแบบมาจากเจดีย์จิตตะกอง ในอุโบสถมีพระพุทธชินราช\n",
-      "จำลองและพระประธานจากอุโบสถหลังเก่าเป็นพระประธาน ในวิหารมีรูปหล่อพระพุทธชินราช\n",
-      "หลวงพ่อโสธร หลวงพ่อวัดเขาตะเครา สมเด็จพระพุฒาจารย์ (โต พฺรหฺมรํสี) หลวงปู่เฒ่า และมี\n",
-      "ศาลาการเปรียญประดับด้วยไม้แกะสลักสวยงาม\n",
-      "○ วัดเสด็จ เดิมชื่อ วัดสร้อยทอง ตั้งอยู่ที่ หมู่ 5 บ้านคลองกระแชง ตำบลสวนพริกไทย อำเภอเมือง\n",
-      "ปทุมธานี จังหวัดปทุมธานี เป็นวัดราษฎร์และโบราณสถานในจังหวัดปทุมธานี ส่วนใหญ่เป็นวัดใน\n",
-      "พระพุทธศาสนา ซึ่งตั้งกระจัดกระจายอยู่ตลอดพื้นที่สองฝั่งแม่น้ำเจ้าพระยา ในรัชสมัยของ\n",
-      "พระบาทสมเด็จพระพุทธยอดฟ้าจุฬาโลกมหาราช พระองค์โปรดเกล้าฯ ให้อพยพผู้คนที่นำมา\n",
-      "จากเมืองปัตตานี มาตั้งบ้านเรือนอยู่ใต้วัดสร้อยทองบริเวณแม่น้ำอ้อม (ปัจจุบันเรียกว่า คลองน้ำ\n",
-      "อ้อม) เรียกกันว่า บ้านแขก มีอาชีพทำสวนพริกไทย ต่อมาในรัชสมัยของพระบาทสมเด็จพระนั่ง\n",
-      "เกล้าเจ้าอยู่หัว ในปี พ.ศ. 2369 เจ้าอนุวงศ์เวียงจันทน์แห่งประเทศลาวเป็นกบฏ พระองค์โปรด\n",
-      "เกล้าฯ ให้เจ้าพระยามหาโยธา (ทอเรียะ คชเสนี) ยกทัพไปปราบจนสงบราบคาบแล้ว จึงได้นำ' metadata={'source': 'data\\\\draft2.pdf', 'file_path': 'data\\\\draft2.pdf', 'page': 9, 'total_pages': 44, 'format': 'PDF 1.4', 'title': 'Fact Sheet จังหวัดปทุมธานี - Google Docs', 'author': '', 'subject': '', 'keywords': '', 'creator': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/128.0.0.0 Safari/537.36', 'producer': 'Skia/PDF m128', 'creationDate': \"D:20240920045425+00'00'\", 'modDate': \"D:20240920045425+00'00'\", 'trapped': ''}\n"
+      "page_content='place_name 3BRO’ COFFEE\n",
+      "description ร้านกาแฟขนาดเล็ก อบอุ่นเหมือนบ้าน\n",
+      "total reviews 11\n",
+      "website https://www.facebook.com/profile.php?id=100070472935430\n",
+      "phone 089 903 6727\n",
+      "main_category ร้านกาแฟ\n",
+      "rating score 5.0\n",
+      "review รสชาติดี ราคาไม่แพง\n",
+      "จอดรถในซอยได้แต่ต้องมองดีๆเพราะรถที่จอดปากทางบังทางเข้า\n",
+      "workday_timing 8:30–16:00\n",
+      "closed_on วันอาทิตย์\n",
+      "address 109 ตำบล บ้านใหม่ อำเภอเมืองปทุมธานี ปทุมธานี 12000\n",
+      "google map https://maps.app.goo.gl/yTN3ZFDKSkorPYfAA'\n"
      ]
     }
    ],
@@ -223,24 +240,14 @@
     "    cleaned_content = re.sub(r'[\\u202a-\\u202e]', '', texts[i].page_content)\n",
     "    texts[i] = Document(metadata=texts[i].metadata, page_content=cleaned_content)\n",
     "\n",
-    "print(texts[140])"
+    "print(texts[200])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Korn\\Desktop\\dsi314\\Chatbot-Tourism-Recommendation-for-Pathum-Thani-Using-RAG\\venv\\Lib\\site-packages\\huggingface_hub\\file_download.py:147: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\Korn\\.cache\\huggingface\\hub\\models--BAAI--bge-m3. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
-      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
-      "  warnings.warn(message)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#HuggingFaceEmbeddings\n",
     "model_name = \"BAAI/bge-m3\"\n",
@@ -284,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -306,48 +313,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "typhoon_prompt = PromptTemplate(\n",
-    "    input_variables=[\"context\",\"question\"],\n",
-    "    template = \"\"\"\n",
-    "    You are an intelligent assistant for question-answering tasks about Pathum Thani, Thailand. \n",
+    "    input_variables=[\"context\", \"question\"],\n",
+    "    template=\"\"\"\n",
+    "    You are an intelligent assistant for question-answering tasks about Pathum Thani, Thailand.\n",
     "    Analyze the context and question carefully to provide an appropriate response.\n",
     "\n",
     "    Context: {context}\n",
     "\n",
     "    Scenario Detection:\n",
-    "    1. If the question is about a tourist attraction:\n",
+    "    1. If the question is about a Tourist attraction, Cafe, or Restaurant:\n",
     "    Response Format:\n",
-    "    - Name of the attraction \n",
-    "    - Description of the place (e.g., unique features, activities available) \n",
-    "    - Opening and closing hours (if available)\n",
-    "    - Additional information (e.g., transportation tips, entrance fees, or special advice)\n",
-    "    - Rating Score (1-5 stars)\n",
-    "    - Total Reviews\n",
-    "    - Example Review (one authentic review)\n",
+    "    - Provide information for at least 3 places.\n",
+    "    - For each place:\n",
+    "        - Name of the attraction\n",
+    "        - Description of the place (e.g., unique features, activities available)\n",
+    "        - Opening and closing hours (if available)\n",
+    "        - Additional information (e.g., transportation tips, entrance fees, or special advice)\n",
+    "        - Rating Score (1-5 stars)\n",
+    "        - Total Review\n",
+    "        - Review\n",
+    "        - Website (if available)\n",
+    "        - Google map (if available)\n",
     "\n",
-    "    2. If the question is about a restaurant:\n",
-    "    Response Format:\n",
-    "    - Name of the attraction \n",
-    "    - Description of the place (e.g., unique features, activities available) \n",
-    "    - Opening and closing hours (if available)\n",
-    "    - Additional information (e.g., transportation tips, entrance fees, or special advice)\n",
-    "    - Rating Score (1-5 stars)\n",
-    "    - Total Reviews\n",
-    "    - Example Review (one authentic review)\n",
-    "\n",
-    "    3. For general conversational questions:\n",
-    "    Respond naturally in Thai, addressing the specific query without a fixed format.\n",
+    "    2. For general conversational questions:\n",
+    "    Respond naturally in Thai or English, addressing the specific query without a fixed format.\n",
     "\n",
     "    Question: {question}\n",
     "\n",
     "    Important Guidelines:\n",
-    "    - Always respond in Thai language\n",
-    "    - Provide accurate and helpful information\n",
-    "    - If no information is available, respond with \"I don't know.\"\n",
+    "    - Respond in Thai or English depending on the language of the question.\n",
+    "    - Provide accurate and helpful information.\n",
+    "    - If no information is available, respond with \"I don't know\" in the language of the question.\n",
     "    \"\"\",\n",
     ")"
    ]
@@ -373,6 +374,7 @@
     "    chat_completion = client.chat.completions.create(\n",
     "        model=\"typhoon-v1.5x-70b-instruct\",\n",
     "        messages=[{\"role\": \"user\", \"content\": prompt}],\n",
+    "        max_tokens=2048,\n",
     "    )\n",
     "    return chat_completion.choices[0].message.content\n",
     "\n",
@@ -386,47 +388,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Korn\\AppData\\Local\\Temp\\ipykernel_8492\\88828299.py:22: LangChainDeprecationWarning: The method `BaseRetriever.get_relevant_documents` was deprecated in langchain-core 0.1.46 and will be removed in 1.0. Use invoke instead.\n",
+      "  retrieved_contexts = retriever.get_relevant_documents(user_question)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "Assistant: สวัสดีค่ะ! ฉันเป็นผู้ช่วยในการตอบคำถามเกี่ยวกับการท่องเที่ยวในจังหวัดปทุมธานี, ประเทศไทย. คุณมีคำถามอะไรเกี่ยวกับสถานที่ท่องเที่ยวหรือไม่?\n",
+      "Assistant: จังหวัดปทุมธานีมีวัดที่น่าสนใจหลายแห่ง ที่จะแนะนำให้คุณทราบดังนี้\n",
       "\n",
-      "Assistant: สวัสดีค่ะ! ฉันเป็นผู้ช่วยในการตอบคำถามเกี่ยวกับการท่องเที่ยวในจังหวัดปทุมธานี, ประเทศไทย. คุณมีคำถามอะไรเกี่ยวกับสถานที่ท่องเที่ยวหรือไม่?\n",
+      "1. วัดไผ่ล้อม: ตั้งอยู่ไม่ไกลจากตัวเมืองปทุมธานี มีสถาปัตยกรรมที่ผสมผสานระหว่างศิลปะแบบอยุธยาตอนปลายและศิลปะแบบจีน มีพระประธานในอุโบสถเป็นพระพุทธรูปปางมารวิชัย และมีเจดีย์ 5 องค์ที่ได้รับอิทธิพลจากศิลปะแบบจีน\n",
       "\n",
-      "Assistant: Hello! I am an assistant for question-answering tasks specializing in tourist attractions in Pathum Thani, Thailand. Do you have any questions about tourist attractions?\n",
+      "2. วัดมูลจินดาราม: ตั้งอยู่ที่ตำบลบึงยี่โถ อำเภอธัญบุรี สร้างขึ้นเมื่อปี พ.ศ. 2439 โดยพระปฏิบัติราชประสงค์ (นามมูลเลอร์ ชาวเยอรมัน) และนางจีน ผู้เป็นภรรยา ได้รับพระราชทานวิสุงคามสีมาเมื่อปี พ.ศ. 2442\n",
       "\n",
-      "Context:\n",
-      "1. ร้านอาหารริมน้ำผู้ใหญ่สุวิทย์\n",
-      "Description: None\n",
-      "Reviews: 299\n",
-      "Website: https://www.wongnai.com/restaurants/80037cs-%E0%B8%A3%E0%B9%89%E0%B8%B2%E0%B8%99%E0%B8%AD%E0%B8%B2%E0%B8%AB%E0%B8%B2%E0%B8%A3%E0%B8%9C%E0%B8%B9%E0%B9%89%E0%B9%83%E0%B8%AB%E0%B8%8D%E0%B9%88%E0%B8%AA%E0%B8%B8%E0%B8%A7%E0%B8%B4%E0%B8%97%E0%B8%A2%E0%B9%8C\n",
-      "Phone: 088 332 9559\n",
-      "Main Category: Restaurant\n",
-      "Rating: 3.9\n",
-      "Workday Timing: 10:00–20:00\n",
-      "Closed On: Open All Days\n",
-      "Address: 55 1 ตำบลบ้านปทุม อำเภอสามโคก ปทุมธานี 12160\n",
-      "Link: https://maps.app.goo.gl/9gA22FMFPpBFBQqG7\n",
-      "2. นายป้อม ซุปเปอร์เล้ง\n",
-      "Description: None\n",
-      "Reviews: 65\n",
-      "Website: None\n",
-      "Phone: 081 195 6915\n",
-      "Main Category: Restaurant\n",
-      "Rating: 4.0\n",
-      "Workday Timing: 10:00–20:00\n",
-      "Closed On: Open All Days\n",
-      "Address: 4G5M+VG8 ตำบล บางกระบือ อำเภอสามโคก ปทุมธานี 12160\n",
-      "Link: https://maps.app.goo.gl/nWUr5At4bFygCcSHA\n",
-      "3. ร้านหนูปลื้ม\n",
-      "Description: None\n",
-      "Reviews: 11\n",
-      "Website: https://www.facebook.com/%E0%B8%AB%E0%B8%99%E0%B8%B9%E0%B8%9B%E0%B8%A5%E0%B8%B7%E0%B9%89%E0%B8%A1-112347470119\n",
+      "3. วัดสระบัว: ตั้งอยู่ในตำบลบึงสนั่น อำเภอธัญบุรี จังหวัดปทุมธานี สร้างขึ้นเมื่อปี พ.ศ. 2425 โดยพระอธิการนก นายสมหวัง และนางจู ได้รับพระราชทานวิสุงคามสีมาเมื่อปี พ.ศ. 2460\n",
+      "\n",
+      "4. วัดบางหลวง: สร้างในสมัยกรุงศรีอยุธยา มีพระประธานในอุโบสถเป็นพระพุทธรูปปางมารวิชัย มีหลวงพ่อเพชรเป็นพระพุทธรูปสมัยเชียงแสน มีพุทธลักษณะพิเศษ คือ พระหัตถ์ซ้ายบิดไปมาได้\n",
+      "\n",
+      "5. วัดหงส์ปทุมาวาส: ตั้งอยู่ริมแม่น้ำเจ้าพระยา ในตำบลบางปรอก อำเภอเมืองปทุมธานี จังหวัดปทุมธานี เป็นวัดที่ได้รับรางวัลชนะเลิศโครงการอนุรักษ์พันธุ์ปลาหน้าวัด มีพันธุ์ปลาต่าง ๆ มากมาย\n",
+      "\n",
+      "6. วัดเสด็จ: ตั้งอยู่ที่ หมู่ 5 บ้านคลองกระแชง ตำบลสวนพริกไทย อำเภอเมืองปทุมธานี จังหวัดปทุมธานี เป็นวัดราษฎร์และโบราณสถานในจังหวัดปทุมธานี\n",
+      "\n",
+      "7. วัดโบสถ์: ตั้งอยู่ริมแม่น้ำเจ้าพระยา ในหมู่ที่ 1 บ้านท้ายดง ตำบลบางกระบือ อำเภอสามโคก จังหวัดปทุมธานี มีพระพุทธรูปศักดิ์สิทธิ์ที่เรียกกันว่า “หลวงพ่อเหลือ” ซึ่งถือเป็นพระคู่บ้านคู่เมืองของปทุมธานี\n",
       "Exiting chat. Goodbye!\n"
      ]
     }
@@ -451,7 +443,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -465,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
